# internal/api/dto/stats.go
@@ -1,0 +1,10 @@
+package dto
+
+type ReviewerStatDto struct {
+	UserID      string `json:"user_id"`
+	ReviewCount int    `json:"review_count"`
+}
+
+type ReviewerStatsResponse struct {
+	Items []ReviewerStatDto `json:"items"`
+}
